Partial fix to issue #154: Increase gap between headings and ruled lists on small screen

--- a/style/css/documentation.css
+++ b/style/css/documentation.css
@@ -1061,6 +1061,8 @@ input.button-invert,
   color: #494c49;
   color: rgba(73, 76, 73, 0.6);
   font-size: 0.8em;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
 }
 
 .heading-contrast strong {
@@ -3113,7 +3115,7 @@ input.button-s,
   }
 }
 .list-ruled {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .list-ruled li {
