--- a/style/css/main.css
+++ b/style/css/main.css
@@ -1061,6 +1061,7 @@ input.button-invert,
   color: #494c49;
   color: rgba(73, 76, 73, 0.6);
   font-size: 0.8em;
+  margin-top: 1em;
 }
 
 .heading-contrast strong {
@@ -3113,7 +3114,7 @@ input.button-s,
   }
 }
 .list-ruled {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .list-ruled li {
@@ -3207,7 +3208,6 @@ input.button-s,
 
 .list-logos li a {
   display: inline-block;
-  width: 100%;
 }
 
 .list-social {
